# translate_docx

./: MyDrive_copy_of_Text_Translation_Project.ipynb  README.md  Text_Translation_Project.ipynb  pyproject.toml
python/: Word_to_FLEx_Text.py  docx_to_sentences.py
